# jklmbot

./: README.md  main.py  pyproject.toml  requirements.txt
data/: nahuatl.py
jklmbot/: __main__.py
jklmbot/data/: english.py  french.py
